<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Alias</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dictionary">Dictionary</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_edit">Edit</string>
    <string name="title_activity_add_dict">Add Dictionary</string>
    <string name="title_activity_game">Game</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_team_s">Choose teams</string>
    <string name="title_activity_game_proc">Game</string>
    <string name="title_activity_how_to_play">How To Play</string>
    <string name="title_activity_import">Import</string>
    <string name="title_activity_swipe_list_view">SwipeListView</string>
    <string name="title_activity_word_statistic">Word Statistic</string>
    <string name="title_activity_turn_stat">Turn Statistics</string>
    <string name="title_activity_round_stat">Round statistics</string>

    <string-array name="dictionaries">
        <item>Штаны</item>
        <item>Живопись</item>
        <item>Колбастер</item>
        <item>Сосистер</item>
        <item>Мой словарь 1</item>
    </string-array>
    <string-array name="teamset">
        <item>Бурундуки</item>
        <item>Суслики</item>
        <item>Бобрики</item>
        <item>Сосистеры</item>
        <item>Прост</item>
    </string-array>
    <string-array name="add_dictionaries">
        <item>Игра престолов</item>
        <item>Наша группа</item>
        <item>Лейкопластырь</item>
    </string-array>
    <string-array name="words">
        <item>Термоядерный синтез</item>
        <item>Британские ученые</item>
        <item>Три-метил-бутан</item>
        <item>Большой взрыв</item>
        <item>Популярная механика</item>
        <item>Эйнштейн</item>
        <item>Сингулярность</item>
    </string-array>
    <string-array name="teamNames">
            <item>Выбрать словарь:</item>
            <item>Наука</item>
            <item>Живопись</item>
            <item>The Game of Thrones</item>
        </string-array>
    <string name="title_activity_download">Download</string>

    <string name="hello_world">Hello world!</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="alias">Alias</string>
    <string name="game">Game</string>
    <string name="continueWord">Continue</string>
    <string name="dictionaries">Dictionaries</string>
    <string name="howToPlay">How to play?</string>
    <string name="settings">Settings</string>
    <string name="aboutApp">About</string>

    <string name="ready">Ready</string>
    <string name="teams">Teams</string>
    <string name="enterTeamName">Enter team name..</string>

    <string name="gameSettings">Game settings</string>
    <string name="timeForRoundText">Time for round:</string>
    <string name="wordsToWinText">Words to win:</string>
    <string name="startGame">Start game!</string>





    <string name="play">Play</string>
    <string name="team">Team</string>
    <string name="go">Go!</string>
    <string name="round">Round</string>
    <string name="score">Score:</string>
    <string name="enterTimeInSeconds">Enter time in seconds</string>
    <string name="enterWordsToWin">Enter number of words</string>


</resources>
