<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:paddingBottom="@dimen/activity_vertical_margin"
tools:context="com.example.andrew_975.alias.DictionaryActivity"
    android:clickable="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/alias"
        android:id="@+id/textView4"
        android:textSize="70dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/game"
        android:id="@+id/textView5"
        android:textSize="40dp"
        android:clickable="true"
        android:onClick="onClickGame"
        android:layout_above="@+id/textView21"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/dictionaries"
        android:id="@+id/textView6"
        android:textSize="40dp"
        android:onClick="onClickDict"
        android:clickable="true"
        android:layout_above="@+id/textView20"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/settings"
        android:id="@+id/textView7"
        android:textSize="40dp"
        android:onClick="onClickSettings"
        android:clickable="true"
        android:layout_above="@+id/textView8"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/aboutApp"
        android:id="@+id/textView8"
        android:textSize="40dp"
        android:onClick="onClickAbout"
        android:clickable="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/howToPlay"
        android:id="@+id/textView20"
        android:textSize="40dp"
        android:onClick="onClickHowToPlay"
        android:clickable="true"
        android:layout_above="@+id/textView7"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/continueWord"
        android:id="@+id/textView21"
        android:textSize="40dp"
        android:clickable="true"
        android:layout_above="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:textColor="#b1adadad" />

</RelativeLayout>