<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.andrew_975.alias.GameActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/gameSettings"
        android:id="@+id/game"
        android:textSize="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/backButtonGameActivity"
        android:background="@drawable/drawable"
        android:onClick="onClickGameToMain"
        android:layout_alignBottom="@+id/game"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chooseDictionarySpinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/game"
        android:layout_marginTop="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/timeForRoundText"
        android:textSize="30dp"
        android:id="@+id/timeForRoundText"
        android:layout_below="@+id/chooseDictionarySpinner"
        android:layout_toRightOf="@+id/backButtonGameActivity"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/wordsToWinText"
        android:id="@+id/wordsToWinText"
        android:textSize="30dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/timeForRoundBar"
        android:layout_alignLeft="@+id/timeForRoundText"
        android:layout_alignStart="@+id/timeForRoundText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startGame"
        android:id="@+id/button2"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:layout_below="@+id/wordsToWinBar"
        android:layout_marginTop="50dp"
        android:onClick="onClickGameStart"/>

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timeForRoundBar"
        android:layout_below="@+id/timeForRoundText"
        android:longClickable="true"
        android:max="200"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/wordsToWinBar"
        android:layout_below="@+id/wordsToWinText"
        android:max="150"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:longClickable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="0"
        android:textSize="30dp"
        android:id="@+id/timeForRoundValueText"
        android:layout_below="@+id/chooseDictionarySpinner"
        android:layout_toRightOf="@+id/timeForRoundText"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="0"
        android:textSize="30dp"
        android:id="@+id/wordsToWinValueText"
        android:layout_below="@+id/timeForRoundBar"
        android:layout_toRightOf="@+id/wordsToWinText"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"/>

    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/timeForRoundImageButton"
        android:layout_below="@+id/chooseDictionarySpinner"
        android:layout_toRightOf="@+id/timeForRoundValueText"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:onClick="onClickTimeForRoundButton"/>

    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/wordsToWinImageButton"
        android:layout_below="@+id/timeForRoundBar"
        android:layout_toRightOf="@+id/wordsToWinValueText"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:onClick="onClickWordsToWinButton"/>

</RelativeLayout>
